# hmmsearch_rs

./: Cargo.toml  README.md
data/: test03.faa  try.hmm
src/: hmmsearch_rs.rs
