[package]
name = "hmmsearch_rs"
version = "0.1.0"
edition = "2021"

[[bin]]

name = "hmmsearch_rs"
path = "src/hmmsearch_rs.rs"


[dependencies]

hmmer-rs = {git = "https://github.com/jianshu93/hmmer-rs"}
needletail = { version = "0.5" }
rayon = { version = "1.10" }
chrono = { version = "0.4" }
log = { version = "0.4" }
env_logger = { version = "0.11" }
clap = { version = "4.5" }

crossbeam-utils = { version = "0.8" }
crossbeam-channel = { version = "0.5" }
crossbeam = { version = "0.8" }
num_cpus = { version = "1.13.0" }





