[package]
name = "hmmsearch_rs"
version = "0.1.0"
edition = "2021"

[[bin]]

name = "hmmsearch_rs"
path = "src/hmmsearch_rs.rs"


[dependencies]

##hmmer-rs = {git = "https://github.com/jianshu93/hmmer-rs"}
hmmer-rs-2= "0.2.1"
needletail = { version = "0.5" }
chrono = { version = "0.4" }
log = { version = "0.4" }
env_logger = { version = "0.11" }
clap = { version = "4.5" }





